--- a/client/src/components/StaffList/StaffList.scss
+++ b/client/src/components/StaffList/StaffList.scss
@@ -25,12 +25,12 @@
 }
 
 .cross-line{
-    width: 100%;
+    width: calc(100% - 2em);
     color: #545454;
     text-align: center;
     border-bottom: 1px solid #545454;
     line-height: 0.1em;
-    margin: 10px 0 20px;
+    margin: 10px auto 20px;
     text-transform: uppercase;
     font-weight: lighter;
     span{
